# stuff

./: .bashrc  .emacs  .emacs_minimal  .gitignore  README.md
.emacs.d/: cedet  ecb  ecb-custom-template.el  ecb-layouts.html  ede-custom-template.el  jam-mode.el  semantic.html
.emacs.d/cedet-1.1/cogre/: cogre-ascii.elc  cogre-convert.elc  cogre-dot-mode.elc  cogre-layout.elc  cogre-load.elc  cogre-loaddefs.el  cogre-loaddefs.el~  cogre-mode.elc  cogre-periodic.elc  cogre-semantic.elc  cogre-srecode.elc  cogre-uml.elc  cogre-utest.elc  cogre.elc  picture-hack.elc  wisent-dot-wy.el  wisent-dot.elc
.emacs.d/cedet-1.1/common/: cedet-android.elc  cedet-autogen.elc  cedet-compat.elc  cedet-cscope.elc  cedet-edebug.elc  cedet-files.elc  cedet-global.elc  cedet-graphviz.elc  cedet-idutils.elc  cedet-java.elc  cedet-load.elc  cedet-loaddefs.el  cedet-loaddefs.el~  cedet-m3.elc  cedet-utests.elc  cedet.el  cedet.elc  data-debug.elc  ezimage.elc  fame.elc  inversion.elc  mode-local.elc  pprint.elc  pulse.elc  working.elc
.emacs.d/cedet-1.1/contrib/: cedet-contrib-load.elc  cedet-contrib.elc  contrib-loaddefs.el  contrib-loaddefs.el~  eassist.elc  ede-gnustep.elc  semantic-ectag-scala.elc  semantic-tag-folding.elc  wisent-csharp-wy.el  wisent-csharp.elc  wisent-php-wy.el  wisent-php.elc  wisent-ruby-wy.el  wisent-ruby.elc
.emacs.d/cedet-1.1/ede/: autoconf-compat.elc  autoconf-edit.elc  ede-android.elc  ede-arduino.elc  ede-auto.elc  ede-base.elc  ede-cpp-root.elc  ede-custom.elc  ede-dired.elc  ede-emacs.elc  ede-files.elc  ede-generic.elc  ede-linux.elc  ede-load.elc  ede-loaddefs.el  ede-loaddefs.el~  ede-locate.elc  ede-m3.elc  ede-make.elc  ede-pconf.elc  ede-pmake.elc  ede-proj-archive.elc  ede-proj-aux.elc  ede-proj-comp.elc  ede-proj-elisp.elc  ede-proj-info.elc  ede-proj-misc.elc  ede-proj-obj.elc  ede-proj-prog.elc  ede-proj-scheme.elc  ede-proj-shared.elc  ede-proj.elc  ede-shell.elc  ede-source.elc  ede-speedbar.elc  ede-srecode.elc  ede-system.elc  ede-util.elc  ede.elc  makefile-edit.elc  (+1 more)
.emacs.d/cedet-1.1/eieio/: chart.elc  eieio-base.elc  eieio-comp.elc  eieio-custom.elc  eieio-datadebug.elc  eieio-doc.elc  eieio-load.elc  eieio-loaddefs.el  eieio-loaddefs.el~  eieio-opt.elc  eieio-speedbar.elc  eieio.elc  linemark.elc  lmcompile.elc
.emacs.d/cedet-1.1/semantic/: semantic-adebug.elc  semantic-analyze-complete.elc  semantic-analyze-debug.elc  semantic-analyze-fcn.elc  semantic-analyze-refs.elc  semantic-analyze.elc  semantic-ast.elc  semantic-chart.elc  semantic-complete.elc  semantic-ctxt.elc  semantic-custom.elc  semantic-debug.elc  semantic-decorate-include.elc  semantic-decorate-mode.elc  semantic-decorate.elc  semantic-dep.elc  semantic-doc.elc  semantic-edit.elc  semantic-elp.elc  semantic-find.elc  semantic-fmt-utest.elc  semantic-format.elc  semantic-fw.elc  semantic-grammar-wy.el  semantic-grammar.elc  semantic-html.elc  semantic-ia-sb.elc  semantic-ia-utest.elc  semantic-ia.elc  semantic-idle.elc  semantic-imenu.elc  semantic-lex-spp.elc  semantic-lex.elc  semantic-load.elc  semantic-loaddefs.el  semantic-loaddefs.el~  semantic-m3.elc  semantic-mru-bookmark.elc  semantic-regtest.elc  semantic-sb.elc  (+28 more)
.emacs.d/cedet-1.1/speedbar/: dframe.elc  speedbar-load.elc  speedbar-loaddefs.el  speedbar-loaddefs.el~  speedbar.elc
code_template/: __init__.py  code_template.py  code_template_helpers.py  create_project.py
code_template/templates/: amboss_header.h  amboss_header.json  amboss_header.py  amboss_header.yapsy-plugin  amboss_main.cpp  amboss_main.json  amboss_main.py  amboss_main.yapsy-plugin  amboss_source.cpp  amboss_source.json  amboss_source.py  amboss_source.yapsy-plugin  amboss_test.py  amboss_test.yapsy-plugin  gp_header.yapsy-plugin  gpcxx_header.py  gpcxx_header.yapsy-plugin  gpcxx_test.py  gpcxx_test.yapsy-plugin  odeint_header.py  odeint_header.yapsy-plugin  odeint_source.py  odeint_source.yapsy-plugin  odeint_test.py  odeint_test.yapsy-plugin  simple_cmakelists.py  simple_cmakelists.yapsy-plugin  simple_cpp.py  simple_cpp.yapsy-plugin  simple_header.yapsy-plugin  simple_jamfile.py  simple_jamfile.yapsy-plugin  simple_makefile.py  simple_makefile.yapsy-plugin  simplecpp.cpp  simplecpp.json  simplecpp.py  simplecpp.yapsy-plugin  simpleheader.py  simpleheader.yapsy-plugin  (+17 more)
cppug_testing/: .gitignore  CMakeLists.txt  CppunitMain.cpp  Expr.h  ExprCppunit.cpp  ExprGTest.cpp  Talk.odp  main.cpp
differential_evolution/: CMakeLists.txt  main.cpp
eo/first/: CMakeLists.txt  FirstRealEA.cpp
eo/gp/: CMakeLists.txt  fitness.h  main.cpp  node.h  parameters.h
eo/second/: CMakeLists.txt  SecondRealEA.cpp  real_value.h
ml/: CMakeLists.txt  SymbRegEvalOp.cpp  SymbRegEvalOp.hpp  SymbRegMain.cpp  main.cpp
ml/conf/: conf_karsten.conf
thread_pool/: CMakeLists.txt  main.cpp
thread_pool/cmake/modules/: FindAmboss.cmake
thread_pool/impl1/: CMakeLists.txt  CMakeLists.txt~  ThreadPool.cpp  ThreadPool.h  main.cpp
thread_pool/impl2/: CMakeLists.txt  locking_ptr.h  main.cpp  main.cpp~  threadpool.h  threadpool_core.cpp  threadpool_core.h  worker_thread.cpp  worker_thread.h
thread_pool/impl3/: CMakeLists.txt  main.cpp  thread_pool.h  threadsafe_queue.h
type_erasure/rule_engine/: .#rule_engine.h  Makefile  rule_engine.cpp  rule_engine.h
type_erasure/rule_engine_simple/: Makefile  rule_engine.cpp  rule_engine.h
(+90 files in other folders)
